[package]
name = "tree-sitter-chariot"
description = "Chariot DSL Tree Sitter"
version = "0.1.0"
authors = ["WuX <wux@thenest.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "chariot"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/elysium-os/chariot-tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
